@@ -1,0 +1,4 @@
+## ${LINKS_TITLE}
+
+  * [Makefly Blog](http://makefly.e-mergence.org "The Makefly Blog!")
+  * [DuckDuckGo Search Engine](http://ddg.gg "DDG Search Engine")
