@@ -1,5 +1,7 @@
     </div>
 
+    ${SIDEBAR}
+
     <footer>
     <p>${POWERED_BY} <a href="http://makefly.e-mergence.org/">Makefly</a> (<a href="http://gitorious.org/makefly/" title="${SOURCE_LINK_TITLE}">${SOURCE_LINK_NAME} gitorious</a>)<br />
     ${THEME_IS} Makefly Base</p>
