@@ -85,14 +85,7 @@
 
 <div id="conteneur">
     
-	 <aside id="laterale">
-		<div>
-	 		<a class="toggle laterale open" href="#laterale">
-				<strong>&rarr; </strong>Lateral panel</a>
-	 		<a class="toggle laterale close" href="#">
-				<strong>&larr; </strong>Close</a>
-    </div>
-   </aside>
+	 ${SIDEBAR}
 
    <section id="flux">
 
