@@ -1,0 +1,10 @@
+ <aside id="laterale">
+		<div>
+	 		<a class="toggle laterale open" href="#laterale">
+				<strong>&rarr; </strong>Lateral panel</a>
+	 		<a class="toggle laterale close" href="#">
+				<strong>&larr; </strong>Close</a>
+      ${SIDEBAR_CONTENT}
+    </div>
+   </aside>
+
